Refactor application name from "Citizen Science" to "EcoFlora" across the codebase, update localized strings, and implement themed logo support. Remove unused image assets and enhance theme management with SharedPreferences for persistence. Update web manifest and index.html for branding changes.